--- a/index.html
+++ b/index.html
@@ -10,16 +10,22 @@
   <title>Bikcraft - Bicicletas Elétricas</title>
 
   <link rel="stylesheet" href="./css/style.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+
+  <link rel="shortcut icon" href="img/favicon.svg" type="image/x-icon">
 </head>
 
 <body>
   <header class="header-bg">
-    <div class="header">
+    <div class="header container">
       <a href="./">
         <img src="img/bikcraft.svg" alt="bikcraft">
       </a>
       <nav aria-label="primaria">
-        <ul class="header-menu">
+        <ul class="header-menu font-1-m cor-0">
           <li><a href="./bicicletas.html">Bicicletas</a></li>
           <li><a href="./seguros.html">Contato</a></li>
           <li><a href="./contato.html">Seguros</a></li>
@@ -27,6 +33,50 @@
       </nav>
     </div>
   </header>
+  <main class="intro-bg">
+    <div class="intro container">
+      <div class="intro-conteudo">
+        <h1 class="font-1-xxl cor-0">Bicicletas feitas sob medida<span class="cor-p1">.</span></h1>
+        <p class="font-2-l cor-5">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
+        <a class="botao" href="./bicicletas.html">SELECIONE A SUA</a>
+      </div>
+      <div>
+        <img src="img/fotos/introducao.jpg" alt="Bicicleta elétricas preta">
+      </div>
+    </div>
+  </main>
+
+  <article class="bicicletas">
+
+    <h2 class="font-1-xxl container">escolha a sua<span class="cor-p1">.</span></h1>
+    </h2>
+
+    <ul>
+      <li>
+        <a href="./bicicletas/magic.html">
+          <img src="img/bicicletas/magic-home.jpg" alt="">
+          <h3 class="font-1-xl">Magic Might</h3>
+          <span class="font-2-m cor-8">R$ 2499,00</span>
+        </a>
+      </li>
+
+      <li>
+        <a href="./bicicletas/nimbus.html">
+          <img src="img/bicicletas/nimbus-home.jpg" alt="">
+          <h3 class="font-1-xl">Nimbus Stark</h3>
+          <span class="font-2-m cor-8">R$ 4999,00</span>
+        </a>
+      </li>
+
+      <li>
+        <a href="./bicicletas/nebula.html">
+          <img src="img/bicicletas/nebula-home.jpg" alt="">
+          <h3 class="font-1-xl">Nebula Cosmic</h3>
+          <span class="font-2-m cor-8">R$ 3999,00</span>
+        </a>
+      </li>
+    </ul>
+  </article>
 </body>
 
 </html>
