--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
 
   <link rel="stylesheet" href="./css/style.css">
 
+  <!--<link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet"> -->
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 
   <link rel="shortcut icon" href="img/favicon.svg" type="image/x-icon">
 </head>
@@ -36,7 +40,7 @@
   <main class="intro-bg">
     <div class="intro container">
       <div class="intro-conteudo">
-        <h1 class="font-1-xxl cor-0">Bicicletas feitas sob medida<span class="cor-p1">.</span></h1>
+        <h1 class="font-1-xxl cor-0">Bicicletas feitas sob medida<span class="cor-p3">.</span></h1>
         <p class="font-2-l cor-5">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
         <a class="botao" href="./bicicletas.html">SELECIONE A SUA</a>
       </div>
@@ -48,7 +52,7 @@
 
   <article class="bicicletas">
 
-    <h2 class="font-1-xxl container">escolha a sua<span class="cor-p1">.</span></h1>
+    <h2 class="font-1-xxl container">escolha a sua<span class="cor-p3">.</span></h1>
     </h2>
 
     <ul>
@@ -77,6 +81,61 @@
       </li>
     </ul>
   </article>
+
+  <article class="tecnologia-bg">
+    <div class="tecnologia container">
+      <div class="tecnologia-conteudo">
+        <span class="font-2-l-b cor-5">TECNOLOGIA AVANÇADA</span>
+        <h2 class="font-1-xxl cor-0">você escolhe as suas cores e componentes<span class="cor-p3">.</span></h2>
+        <p class="font-2-l cor-5">Cada Bikcraft é única e possui a sua identidade. As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente as suas cores.</p>
+        <a class="link" href="./bicicletas.html">ESCOLHA UM MODELO</a>
+
+        <div class="tecnologia-vtg">
+          <div>
+            <img src="img/icones/eletrica.svg" alt="">
+            <h3 class="font-1-m cor-0">Motor Elétrico</h3>
+            <p class="font-2-s cor-5">Toda Bikcraft é equipada com um motor elétrico que possui duração de até 120h. A bateria é recarregada com a sua energia gasta ao pedalar.</p>
+          </div>
+          <div>
+            <img src="img/icones/rastreador.svg" alt="">
+            <h3 class="font-1-m cor-0">Rastreador</h3>
+            <p class="font-2-s cor-5">Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos rastreadores e sistemas anti-furto para garantir o seu sossego.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="tecnologia-img">
+        <img src="img/fotos/tecnologia.jpg" alt="">
+      </div>
+    </div>
+  </article>
+
+  <section class="parceiros" aria-label="Nossos Parceiros">
+    <h2 class="font-1-xxl container">nossos parceiros<span class="cor-p3">.</span></h2>
+
+    <ul>
+      <li><img src="img/parceiros/caravan.svg" alt="caravan"></li>
+      <li><img src="img/parceiros/ranek.svg" alt="ranek"></li>
+      <li><img src="img/parceiros/handel.svg" alt="handel"></li>
+      <li><img src="img/parceiros/dogs.svg" alt="dogs"></li>
+      <li><img src="img/parceiros/lescone.svg" alt="lescone"></li>
+      <li><img src="img/parceiros/flexblog.svg" alt="flexblog"></li>
+      <li><img src="img/parceiros/wildbeast.svg" alt="wildbeast"></li>
+      <li><img src="img/parceiros/surfbot.svg" alt="surfbot"></li>
+    </ul>
+  </section>
+
+  <section class="depoimento" aria-label="Depoimento">
+    <div>
+      <img src="img/fotos/depoimento.jpg" alt="">
+    </div>
+    <div class="depoimento-conteudo">
+      <blockquote>
+        <p class="font-1-xl cor-0">Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez foi intensificar o meu amor por esta atividade. Recomendo à todos que amo.</p>
+        <span class="font-1-m-b cor-0">Ana Júlia</span>
+      </blockquote>
+    </div>
+  </section>
 </body>
 
 </html>
