--- a/index.html
+++ b/index.html
@@ -11,10 +11,6 @@
 
   <link rel="stylesheet" href="./css/style.css">
 
-  <!--<link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet"> -->
-
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
@@ -136,6 +132,75 @@
       </blockquote>
     </div>
   </section>
+
+  <article class="seguros-bg">
+    <div class="seguros container">
+      <h2 class="font-1-xxl cor-0">seguros<span class="cor-p3">.</span></h2>
+      <div class="seguros-item">
+        <h3 class="font-1-xl cor-6">PRATA</h3>
+        <span class="font-1-xl cor-0">R$ 199 <span class="font-1-xs cor-6">mesal</span></span>
+        <ul class="font-2-m cor-0">
+          <li>Duas trocas por ano</li>
+          <li>Assistência técnica</li>
+          <li>Suporte 08h às 18h</li>
+          <li>Cobertura estadual</li>
+        </ul>
+        <a class="botao secundario" href="./orcamento.html">Inscreva-se</a>
+      </div>
+
+      <div class="seguros-item">
+        <h3 class="font-1-xl cor-6">OURO</h3>
+        <span class="font-1-xl cor-0">R$ 299 <span class="font-1-xs cor-6">mesal</span></span>
+        <ul class="font-2-m cor-0">
+          <li>Cinco trocas por ano</li>
+          <li>Assistência especial</li>
+          <li>Suporte 24h</li>
+          <li>Cobertura nacional</li>
+          <li>Descontos em parceiros</li>
+          <li>Acesso ao Glube Bikcraft</li>
+        </ul>
+        <a class="botao" href="./orcamento.html">Inscreva-se</a>
+      </div>
+    </div>
+  </article>
+
+  <footer class="footer-bg">
+    <div class="footer container">
+      <img src="img/bikcraft.svg" alt="bikcraft">
+      <div class="footer-contato">
+        <h3 class="font-2-l-b cor-0">CONTATO</h3>
+        <ul class="font-2-m cor-5">
+          <li><a href="tel:+55 21 9999-9999"></a>+55 21 9999-9999</li>
+          <li><a href="mailto:contato@bickcraft.com"></a>contato@bickcraft.com</li>
+          <li>Rua Ali Perto, 42 - Botafogo</li>
+          <li>Rio de Janeiro - RJ</li>
+        </ul>
+        <div class="footer-redes">
+          <a href="">
+            <img src="img/icones/redes/instagram.svg" alt="Instagram">
+          </a>
+          <a href="">
+            <img src="img/icones/redes/youtube.svg" alt="Youtube">
+          </a>
+          <a href="">
+            <img src="img/icones/redes/facebook.svg" alt="Facebook">
+          </a>
+        </div>
+      </div>
+      <div class="footer-informacoes">
+        <h3 class="font-2-l-b cor-0">INFORMAÇÕES</h3>
+        <nav>
+          <ul class="font-1-m cor-5">
+            <li><a href="./bicicletas.html">Bicicletas</a></li>
+            <li><a href="./seguros.html">Seguros</a></li>
+            <li><a href="./contato.html">Contatos</a></li>
+            <li><a href="./termos.html">Termos e Condições</a></li>
+          </ul>
+        </nav>
+      </div>
+      <p class="footer-copy font-2-m cor-6">Bickcraft. © Alguns direitos reservados.</p>
+    </div>
+  </footer>
 </body>
 
 </html>
