--- a/bicicletas.html
+++ b/bicicletas.html
@@ -42,6 +42,36 @@
       </div>
     </div>
 
+    <div class="bicicletas-bg">
+      <div class="bc container">
+        <div class="bicicletas-imagem">
+          <img src="img/bicicletas/nimbus.jpg" alt="">
+          <span class="font-2-m cor-0">R$ 4999</span>
+        </div>
+        <div class="bicicletas-conteudo">
+          <h2 class="font-1-xl">Nimbus Stark</h2>
+          <p class="font-2-s cor-8">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
+          <ul class="font-1-m cor-8">
+            <li>
+              <img src="img/icones/eletrica.svg" alt="">
+              Motor Elétrico
+            </li>
+            <li>
+              <img src="img/icones/carbono.svg" alt="">
+              Fibra de Carbono
+            </li>
+            <li>
+              <img src="img/icones/velocidade.svg" alt="">
+              40km/h
+            </li>
+            <li>
+              <img src="img/icones/rastreador.svg" alt="">
+              Rastreador
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
 
   </main>
 
