--- a/bicicletas.html
+++ b/bicicletas.html
@@ -9,26 +9,28 @@
 
   <title>Bicicletas | Bickcraft</title>
 
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="preload" href="./css/style.min.css" as="style">
+  <link rel="stylesheet" href="./css/style.min.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 
   <link rel="shortcut icon" href="img/favicon.svg" type="image/x-icon">
+  <script>document.documentElement.classList.add('js')</script>
 </head>
 
 <body>
   <header class="header-bg">
     <div class="header container">
-      <a href="./">
+      <a href="./index.html">
         <img src="img/bikcraft.svg" alt="bikcraft">
       </a>
       <nav aria-label="primaria">
         <ul class="header-menu font-1-m cor-0">
           <li><a href="./bicicletas.html">Bicicletas</a></li>
-          <li><a href="./seguros.html">Contato</a></li>
-          <li><a href="./contato.html">Seguros</a></li>
+          <li><a href="./contato.html">Contato</a></li>
+          <li><a href="./seguros.html">Seguros</a></li>
         </ul>
       </nav>
     </div>
@@ -42,6 +44,97 @@
       </div>
     </div>
 
+    <div class="bc container">
+      <div class="bicicletas-imagem">
+        <img src="img/bicicletas/nimbus.jpg" alt="">
+        <span class="font-2-m cor-6">R$ 4999</span>
+      </div>
+      <div class="bicicletas-conteudo">
+        <h2 class="font-1-xl">Nimbus Stark</h2>
+        <p class="font-2-s cor-8">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
+        <ul class="font-1-m cor-8">
+          <li>
+            <img src="img/icones/eletrica.svg" alt="">
+            Motor Elétrico
+          </li>
+          <li>
+            <img src="img/icones/carbono.svg" alt="">
+            Fibra de Carbono
+          </li>
+          <li>
+            <img src="img/icones/velocidade.svg" alt="">
+            40km/h
+          </li>
+          <li>
+            <img src="img/icones/rastreador.svg" alt="">
+            Rastreador
+          </li>
+        </ul>
+        <a class="botao seta" href="./bicicletas/nimbus.html">Mais Sobre</a>
+      </div>
+    </div>
+
+    <div class="bicicletas-bg">
+      <div class="bc container">
+        <div class="bicicletas-imagem">
+          <img src="img/bicicletas/magic.jpg" alt="">
+          <span class="font-2-m cor-6">R$ 2499</span>
+        </div>
+        <div class="bicicletas-conteudo">
+          <h2 class="font-1-xl cor-0">Magic Might</h2>
+          <p class="font-2-s cor-5">A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
+          <ul class="font-1-m cor-5">
+            <li>
+              <img src="img/icones/eletrica.svg" alt="">
+              Motor Elétrico
+            </li>
+            <li>
+              <img src="img/icones/carbono.svg" alt="">
+              Fibra de Carbono
+            </li>
+            <li>
+              <img src="img/icones/velocidade.svg" alt="">
+              40km/h
+            </li>
+            <li>
+              <img src="img/icones/rastreador.svg" alt="">
+              Rastreador
+            </li>
+          </ul>
+          <a class="botao seta" href="./bicicletas/magic.html">Mais Sobre</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="bc container">
+      <div class="bicicletas-imagem">
+        <img src="img/bicicletas/nebula.jpg" alt="">
+        <span class="font-2-m cor-6">R$ 3999</span>
+      </div>
+      <div class="bicicletas-conteudo">
+        <h2 class="font-1-xl">Nebula Cosmic</h2>
+        <p class="font-2-s cor-8">A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
+        <ul class="font-1-m cor-8">
+          <li>
+            <img src="img/icones/eletrica.svg" alt="">
+            Motor Elétrico
+          </li>
+          <li>
+            <img src="img/icones/carbono.svg" alt="">
+            Fibra de Carbono
+          </li>
+          <li>
+            <img src="img/icones/velocidade.svg" alt="">
+            40km/h
+          </li>
+          <li>
+            <img src="img/icones/rastreador.svg" alt="">
+            Rastreador
+          </li>
+        </ul>
+        <a class="botao seta" href="./bicicletas/nebula.html">Mais Sobre</a>
+      </div>
+    </div>
 
   </main>
 
@@ -82,6 +175,7 @@
       <p class="footer-copy font-2-m cor-6">Bickcraft. © Alguns direitos reservados.</p>
     </div>
   </footer>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
