--- a/index.html
+++ b/index.html
@@ -9,26 +9,29 @@
 
   <title>Bikcraft - Bicicletas Elétricas</title>
 
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="preload" href="./css/style.min.css" as="style">
+  <link rel="stylesheet" href="./css/style.min.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 
   <link rel="shortcut icon" href="img/favicon.svg" type="image/x-icon">
+
+  <script>document.documentElement.classList.add('js')</script>
 </head>
 
 <body>
   <header class="header-bg">
     <div class="header container">
-      <a href="./">
-        <img src="img/bikcraft.svg" alt="bikcraft">
+      <a href="./index.html">
+        <img src="img/bikcraft.svg" width="136" height="32" alt="bikcraft">
       </a>
       <nav aria-label="primaria">
         <ul class="header-menu font-1-m cor-0">
           <li><a href="./bicicletas.html">Bicicletas</a></li>
-          <li><a href="./seguros.html">Contato</a></li>
-          <li><a href="./contato.html">Seguros</a></li>
+          <li><a href="./contato.html">Contato</a></li>
+          <li><a href="./seguros.html">Seguros</a></li>
         </ul>
       </nav>
     </div>
@@ -36,13 +39,14 @@
   <main class="intro-bg">
     <div class="intro container">
       <div class="intro-conteudo">
-        <h1 class="font-1-xxl cor-0">Bicicletas feitas sob medida<span class="cor-p3">.</span></h1>
-        <p class="font-2-l cor-5">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
-        <a class="botao" href="./bicicletas.html">SELECIONE A SUA</a>
+        <h1 class="font-1-xxl cor-0 fadeInDown" data-anime="200">Bicicletas feitas sob medida<span class="cor-p3">.</span></h1>
+        <p class="font-2-l cor-5 fadeInDown" data-anime="400">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
+        <a class="botao fadeInDown" data-anime="600" href="./bicicletas.html">SELECIONE A SUA</a>
       </div>
-      <div>
-        <img src="img/fotos/introducao.jpg" alt="Bicicleta elétricas preta">
-      </div>
+      <picture class="fadeInDown" data-anime="800">
+        <source media="(max-width: 800px)" srcset="./img/bicicletas/nimbus.jpg">
+        <img src="./img/fotos/introducao.jpg" width="1280" height="1600" alt="Bicicleta elétrica preta">
+      </picture>
     </div>
   </main>
 
@@ -201,6 +205,8 @@
       <p class="footer-copy font-2-m cor-6">Bickcraft. © Alguns direitos reservados.</p>
     </div>
   </footer>
+  <script src="js/plugins/simple-anime.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
