--- a/termos.html
+++ b/termos.html
@@ -9,26 +9,28 @@
 
   <title>Termos e Condições | Bickcraft</title>
 
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="preload" href="./css/style.min.css" as="style">
+  <link rel="stylesheet" href="./css/style.min.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 
   <link rel="shortcut icon" href="img/favicon.svg" type="image/x-icon">
+  <script>document.documentElement.classList.add('js');</script>
 </head>
 
 <body>
   <header class="header-bg">
     <div class="header container">
-      <a href="./">
+      <a href="./index.html">
         <img src="img/bikcraft.svg" alt="bikcraft">
       </a>
       <nav aria-label="primaria">
         <ul class="header-menu font-1-m cor-0">
           <li><a href="./bicicletas.html">Bicicletas</a></li>
-          <li><a href="./seguros.html">Contato</a></li>
-          <li><a href="./contato.html">Seguros</a></li>
+          <li><a href="./contato.html">Contato</a></li>
+          <li><a href="./seguros.html">Seguros</a></li>
         </ul>
       </nav>
     </div>
@@ -91,6 +93,7 @@
       <p class="footer-copy font-2-m cor-6">Bickcraft. © Alguns direitos reservados.</p>
     </div>
   </footer>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
